// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render with all props assigned 1`] = `
<article
  className="Card test-class animatedCard"
>
  Test
</article>
`;

exports[`Card should render with required props 1`] = `
<article
  className="Card"
>
  Test
</article>
`;
